[tool.poetry]
name = "python-dlt645"
version = "0.1.0"
description = "A basic DL/T645-2007 communication implementation"
authors = ["Stefan 'hr' Berder <stefan@measureofquality.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "dlt645"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 39

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
